// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`provider initialize 1`] = `
<div>
  this is foo
</div>
`;

exports[`provider of prop change 1`] = `
<div>
  this is foo
</div>
`;

exports[`provider of prop change 2`] = `
<div>
  this is faa
</div>
`;

exports[`provider with args 1`] = `
<div>
  this is faa one
</div>
`;

exports[`provider with args 2`] = `
<div>
  this is faa two
</div>
`;

exports[`provider with auto-injected dependencies 1`] = `
<div>
  this is foo
</div>
`;

exports[`withProvider HOC 1`] = `
<div>
  this is foo
</div>
`;

exports[`withProvider HOC with args param 1`] = `
<div>
  this is another faa
</div>
`;

exports[`withProvider with function as param 1`] = `
<div>
  this is from text prop
</div>
`;

exports[`withProvider with function as param 2`] = `
<div>
  this is some other text
</div>
`;
